[gd_scene load_steps=31 format=3 uid="uid://dih2tkchgg7x0"]

[ext_resource type="Script" uid="uid://cgr576c4m6vpp" path="res://entities/song.gd" id="1_jv32a"]
[ext_resource type="FontFile" uid="uid://c64x4gnaw1q22" path="res://assets/fonts/Science_Gothic/ScienceGothic-VariableFont_CTRS,slnt,wdth,wght.ttf" id="2_0bd8t"]
[ext_resource type="Shader" uid="uid://557g0yaormii" path="res://entities/target.tres" id="2_o2o53"]
[ext_resource type="FontVariation" uid="uid://de56o0qyx4dvi" path="res://menu/theme/score.tres" id="2_scy1h"]
[ext_resource type="Texture2D" uid="uid://cb3t3wrdorm6v" path="res://addons/kenney_particle_pack/circle_01.png" id="3_0mt4k"]
[ext_resource type="Texture2D" uid="uid://dil27tl3d85hr" path="res://assets/textures/scorearea.svg" id="5_q2dmg"]
[ext_resource type="FontVariation" uid="uid://cxlh2wreioa5o" path="res://menu/theme/tabularmenufont.tres" id="7_0yoam"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0yoam"]
render_priority = 0
shader = ExtResource("2_o2o53")
shader_parameter/TgtBrite = 1.0

[sub_resource type="PlaneMesh" id="PlaneMesh_jv32a"]
material = SubResource("ShaderMaterial_0yoam")
size = Vector2(0.5, 0.5)

[sub_resource type="FontVariation" id="FontVariation_q2dmg"]
base_font = ExtResource("2_0bd8t")
variation_opentype = {
1129599571: 0,
1936486004: 0,
2003072104: 120,
2003265652: 400
}

[sub_resource type="FontVariation" id="FontVariation_scy1h"]
base_font = ExtResource("2_0bd8t")
variation_opentype = {
1129599571: 0,
1936486004: 0,
2003072104: 150,
2003265652: 700
}

[sub_resource type="Environment" id="Environment_0bd8t"]
background_mode = 1
background_color = Color(0.021000022, 0, 0.06, 1)
ambient_light_source = 2
ambient_light_color = Color(0.08280001, 0.11714671, 0.23, 1)
tonemap_mode = 2
ssao_radius = 1.08
ssao_intensity = 9.3
ssao_horizon = 0.05
ssil_enabled = true
glow_enabled = true

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_q2dmg"]
blend_mode = 1

[sub_resource type="LabelSettings" id="LabelSettings_scy1h"]
font = ExtResource("2_scy1h")
font_size = 56
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0bd8t"]
font = ExtResource("2_scy1h")
font_size = 72
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="FontVariation" id="FontVariation_0mt4k"]
base_font = ExtResource("2_0bd8t")
variation_opentype = {
1129599571: 0,
1936486004: 0,
2003072104: 65,
2003265652: 400
}

[sub_resource type="LabelSettings" id="LabelSettings_q2dmg"]
font = SubResource("FontVariation_0mt4k")
font_size = 40

[sub_resource type="FontVariation" id="FontVariation_o2o53"]
base_font = ExtResource("2_0bd8t")
variation_opentype = {
1129599571: 0,
1936486004: 0,
2003072104: 75,
2003265652: 300
}

[sub_resource type="FontVariation" id="FontVariation_0yoam"]
base_font = ExtResource("2_0bd8t")
variation_opentype = {
1129599571: 0,
1936486004: 0,
2003072104: 75,
2003265652: 300
}

[sub_resource type="LabelSettings" id="LabelSettings_gkj2n"]
font = ExtResource("7_0yoam")
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_0mt4k"]
font_size = 30
font_color = Color(1, 0, 0, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_scy1h"]
blend_mode = 2

[sub_resource type="Gradient" id="Gradient_0mt4k"]
offsets = PackedFloat32Array(0, 0.75, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_q2dmg"]
gradient = SubResource("Gradient_0mt4k")
fill_from = Vector2(1, 0.684)
fill_to = Vector2(1, 0.2735043)

[sub_resource type="Animation" id="Animation_gkj2n"]
resource_name = "PerfectRun"
length = 2.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SongClearedLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["HUD_SONG_CLEARED_PERFECT"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SongClearedLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SongClearedLabel:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.13333334, 2.1666667, 2.4),
"transitions": PackedFloat32Array(0.70710677, 1, 2, 1),
"update": 0,
"values": [Vector2(1, 20), Vector2(1, 1), Vector2(1, 1), Vector2(3, 1e-05)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SongClearedLabel:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.92, 0.78598666, 0.5704, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SongClearedLabel/MarginContainer/TextureRect:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.09999986, 0.4, 0.49999988, 0.8, 0.89999986, 1.2, 1.2999998, 1.6, 1.6999998, 2, 2.1, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.53735584, 0.54306704, 0.90676177, 1), Color(0, 0, 0, 1), Color(0.53735584, 0.54306704, 0.90676177, 1), Color(0, 0, 0, 1), Color(0.53735584, 0.54306704, 0.90676177, 1), Color(0, 0, 0, 1), Color(0.53735584, 0.54306704, 0.90676177, 1), Color(0, 0, 0, 1), Color(0.53735584, 0.54306704, 0.90676177, 1), Color(0, 0, 0, 1), Color(0.53735584, 0.54306704, 0.90676177, 1), Color(0, 0, 0, 1), Color(0.53735584, 0.54306704, 0.90676177, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SongClearedLabel:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Gleam1:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Gleam2:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.10000001),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Gleam1:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.1, 0.4, 2.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1.8247963, 1.8247963, 1.8247963, 1), Color(1.8521385, 1.5898427, 0, 1), Color(1, 1, 0, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Gleam1:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0.1, 2.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(5, 5)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Gleam2:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0.10000001, 0.4, 2.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1.8247963, 1.8247963, 1.8247963, 1), Color(1.8247963, 1.5243363, 0, 1), Color(1, 0.83137256, 0, 0)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Gleam2:scale")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0.10000001, 2.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_0yoam"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SongClearedLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [""]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SongClearedLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SongClearedLabel:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SongClearedLabel:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SongClearedLabel/MarginContainer/TextureRect:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SongClearedLabel:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Gleam1:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Gleam1:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Gleam2:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Gleam2:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Gleam2:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Gleam1:scale")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_o2o53"]
resource_name = "SongClear"
length = 2.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SongClearedLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["HUD_SONG_CLEARED"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SongClearedLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SongClearedLabel:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.13333334, 2.1666667, 2.4),
"transitions": PackedFloat32Array(0.70710677, 1, 2, 1),
"update": 0,
"values": [Vector2(1, 20), Vector2(1, 1), Vector2(1, 1), Vector2(3, 1e-05)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SongClearedLabel:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.42418167, 0.7742649, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SongClearedLabel/MarginContainer/TextureRect:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.8, 0.52, 0, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SongClearedLabel:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Gleam1:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Gleam2:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Gleam1:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.1, 0.4, 2.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1.8247963, 1.8247963, 1.8247963, 1), Color(0, 0.7007295, 2.454227, 1), Color(0, 0.2627451, 1, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Gleam1:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0.1, 2.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(5, 5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_82rk8"]
_data = {
&"PerfectRun": SubResource("Animation_gkj2n"),
&"RESET": SubResource("Animation_0yoam"),
&"SongClear": SubResource("Animation_o2o53")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_scy1h"]
shading_mode = 0

[sub_resource type="BoxMesh" id="BoxMesh_0mt4k"]
material = SubResource("StandardMaterial3D_scy1h")
size = Vector3(20, 0.02, 0.02)

[node name="Song" type="Node3D"]
process_mode = 1
script = ExtResource("1_jv32a")

[node name="ClickTrack" type="AudioStreamPlayer" parent="." groups=["AudioPlayers", "LoopingAudio"]]
volume_db = -12.0

[node name="DebugInfo" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 11

[node name="Playhead" type="Marker3D" parent="."]

[node name="CurrentTrack" type="Marker3D" parent="Playhead"]

[node name="TargetLeft" type="MeshInstance3D" parent="Playhead/CurrentTrack"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.6, 0.01, 0)
layers = 2
mesh = SubResource("PlaneMesh_jv32a")

[node name="TargetCenter" type="MeshInstance3D" parent="Playhead/CurrentTrack"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0)
layers = 2
mesh = SubResource("PlaneMesh_jv32a")

[node name="TargetRight" type="MeshInstance3D" parent="Playhead/CurrentTrack"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.6, 0.01, 0)
layers = 2
mesh = SubResource("PlaneMesh_jv32a")

[node name="InstrumentLabel" type="Label3D" parent="Playhead/CurrentTrack"]
transform = Transform3D(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0.16338265, 0.83456635)
pixel_size = 0.006
billboard = 1
double_sided = false
no_depth_test = true
render_priority = 3
outline_render_priority = 2
text = "inst"
font = SubResource("FontVariation_q2dmg")
font_size = 25
uppercase = true
width = 300.0

[node name="Camera3D" type="Camera3D" parent="Playhead"]
transform = Transform3D(1, 0, 0, 0, 0.8660254, 0.5, 0, -0.5, 0.8660254, 0, 2.5, 2.25)

[node name="CountIn" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -3.934025e-07, 1, 0, -9, -4.371139e-08, 0, 0, 0)
pixel_size = 0.01
render_priority = -1
outline_render_priority = -2
text = "0"
font = SubResource("FontVariation_scy1h")
font_size = 100
outline_size = 20
vertical_alignment = 0
width = 1000.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.9981166, 0.05234906, -0.03198038, 1.3554622e-08, 0.5213224, 0.8533598, 0.061344683, -0.85175264, 0.5203406, 0, 0, 0)
shadow_enabled = true
directional_shadow_mode = 0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0bd8t")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Gleam1" type="TextureRect" parent="HUD"]
visible = false
material = SubResource("CanvasItemMaterial_q2dmg")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -256.0
offset_right = 256.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(256, 256)
texture = ExtResource("3_0mt4k")

[node name="Gleam2" type="TextureRect" parent="HUD"]
visible = false
material = SubResource("CanvasItemMaterial_q2dmg")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -256.0
offset_right = 256.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(256, 256)
texture = ExtResource("3_0mt4k")

[node name="PhraseValueLabel" type="Label" parent="HUD"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 207.0
offset_top = -56.0
offset_right = 289.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
text = "20"
label_settings = SubResource("LabelSettings_scy1h")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreBar" type="TextureRect" parent="HUD"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.92
anchor_right = 0.92
offset_left = -422.40002
offset_right = 133.59998
offset_bottom = 108.0
grow_horizontal = 0
pivot_offset = Vector2(316, 0)
texture = ExtResource("5_q2dmg")

[node name="ScoreLabel" type="Label" parent="HUD/ScoreBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -408.0006
offset_top = 14.0
offset_right = -119.00061
offset_bottom = 121.0
grow_horizontal = 0
theme_override_constants/outline_size = 0
text = "0"
label_settings = SubResource("LabelSettings_0bd8t")
horizontal_alignment = 2
vertical_alignment = 1

[node name="StreakLabel" type="Label" parent="HUD/ScoreBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -477.43994
offset_top = 36.0
offset_right = -439.43994
offset_bottom = 96.0
grow_horizontal = 0
text = "x0"
label_settings = SubResource("LabelSettings_q2dmg")
horizontal_alignment = 1
vertical_alignment = 2

[node name="ScoreTitle" type="Label" parent="HUD/ScoreBar"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -182.00061
offset_top = 10.0
offset_right = -120.00061
offset_bottom = 37.0
grow_horizontal = 0
theme_override_fonts/font = SubResource("FontVariation_o2o53")
text = "SCORE"
horizontal_alignment = 2

[node name="Label2" type="Label" parent="HUD/ScoreBar"]
layout_mode = 1
offset_left = 68.56006
offset_top = 10.0
offset_right = 140.56006
offset_bottom = 37.0
theme_override_fonts/font = SubResource("FontVariation_0yoam")
text = "STREAK"

[node name="TimingStats" type="PanelContainer" parent="HUD/ScoreBar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.745
anchor_top = 1.0
anchor_right = 0.745
anchor_bottom = 1.0
grow_horizontal = 0

[node name="VBoxContainer" type="GridContainer" parent="HUD/ScoreBar/TimingStats"]
layout_mode = 2
columns = 2

[node name="HiSpeedTitle" type="Label" parent="HUD/ScoreBar/TimingStats/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "Hi-Speed"
uppercase = true

[node name="HiSpeedLabel" type="Label" parent="HUD/ScoreBar/TimingStats/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "0.00"
horizontal_alignment = 2

[node name="TimingTitle" type="Label" parent="HUD/ScoreBar/TimingStats/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "Timing"
uppercase = true

[node name="TimingLabel" type="Label" parent="HUD/ScoreBar/TimingStats/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "Normal"
horizontal_alignment = 2
uppercase = true

[node name="NotesHitTitle" type="Label" parent="HUD/ScoreBar/TimingStats/VBoxContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "Notes hit"
uppercase = true

[node name="NotesHitLabel" type="Label" parent="HUD/ScoreBar/TimingStats/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_gkj2n")
horizontal_alignment = 2

[node name="LateHitTitle" type="Label" parent="HUD/ScoreBar/TimingStats/VBoxContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "Late"
uppercase = true

[node name="LateHitLabel" type="Label" parent="HUD/ScoreBar/TimingStats/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
text = "0 ms"
label_settings = SubResource("LabelSettings_gkj2n")
horizontal_alignment = 2

[node name="AvgHitTitle" type="Label" parent="HUD/ScoreBar/TimingStats/VBoxContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "Average"
uppercase = true

[node name="AvgHitLabel" type="Label" parent="HUD/ScoreBar/TimingStats/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
text = "0 ms"
label_settings = SubResource("LabelSettings_gkj2n")
horizontal_alignment = 2

[node name="EarlyHitTitle" type="Label" parent="HUD/ScoreBar/TimingStats/VBoxContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "Early"
uppercase = true

[node name="EarlyHitLabel" type="Label" parent="HUD/ScoreBar/TimingStats/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
text = "0 ms"
label_settings = SubResource("LabelSettings_gkj2n")
horizontal_alignment = 2

[node name="AutoblastLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -97.5
offset_right = 97.5
offset_bottom = 42.0
grow_horizontal = 2
text = "Autoblast ON"
label_settings = SubResource("LabelSettings_0mt4k")
horizontal_alignment = 1

[node name="SongClearedLabel" type="Label" parent="HUD"]
visible = false
modulate = Color(1, 1, 1, 0)
clip_children = 2
custom_minimum_size = Vector2(1000, 120)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -60.0
offset_right = 500.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(500, 60)
label_settings = SubResource("LabelSettings_0bd8t")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="HUD/SongClearedLabel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="HUD/SongClearedLabel/MarginContainer"]
material = SubResource("CanvasItemMaterial_scy1h")
layout_mode = 2
texture = SubResource("GradientTexture2D_q2dmg")

[node name="FastSlowLabel" type="Label" parent="HUD"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = 44.5
offset_right = 22.5
offset_bottom = 71.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "FAST"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnergyBar" type="ProgressBar" parent="HUD"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 360.0
offset_bottom = 64.0
max_value = 8.0
step = 1.0
value = 3.0
show_percentage = false

[node name="SongProgress" type="ProgressBar" parent="HUD"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.15
anchor_right = 0.05
anchor_bottom = 0.9
fill_mode = 3
show_percentage = false

[node name="HUDAnimations" type="AnimationPlayer" parent="HUD"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_82rk8")
}

[node name="actualplayhead" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
visible = false
mesh = SubResource("BoxMesh_0mt4k")
